[package]
name    = "xkb"
version = "0.2.2"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Rusty wrapper around libxkbcommon."
repository  = "https://github.com/meh/rust-xkb"
keywords    = ["xkb", "xkbcommon", "x11", "xcb"]

[dependencies]
bitflags = "1"
libc     = "0.2"
ffi      = { package = "xkbcommon-sys", version = "1.3" }

[dependencies.xcb]
version  = "0.9"
features = ["xkb"]
optional = true

[features]
static = ["ffi/static"]
x11    = ["ffi/x11", "xcb"]
